# OpenWeatherMap-API

./: .gitignore  CMakeLists.txt  README.md  main.cpp  owm-api.pri  owm-api.pro  weatherapi.cpp  weatherapi.h
cmake/: version.cmake
docs/: CMakeLists.txt  Doxyfile.in  api.md  doxygen.cmake  easy-doxygen.cmake
scripts/: build
src/: ApiKeyManager.cpp  ApiKeyManager.h  CMakeLists.txt  HttpRequest.cpp  HttpRequest.h  main.cpp  weatherapi.cpp  weatherapi.h
src/ui/: CMakeLists.txt  ExperimentalSysTray.cpp  ExperimentalSysTray.h  SysTray.cpp  SysTray.h  systray.qrc
